# claude-code-iterm-worktree-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_zh.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  test_feature.py  test_mcp_fix.py  test_multi_session_communication.py  worktree_mcp_server.py
.claude/: settings.local.json
src/iterm2_worktree_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worktree_mcp/: __init__.py  communication.py  core.py  models.py  server.py  session_manager.py
